--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,10 @@ fabric_version=0.87.0+1.20.1
 # Mod Menu
 modmenu_version=7.2.2
 
+# LDLib for advanced UI components (CurseMaven format)
+ldlib_project_id=626676
+ldlib_file_id=5618582
+
 # Sodium
 sodium_version=mc1.20.1-0.5.3
 
